--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://jamievos991.github.io/cleaning-roster",
   "type": "module",
   "scripts": {
     "dev": "vite",
