--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "my-app",
+  "homepage": "https://jamievos991.github.io/cleaning-roster",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://jamievos991.github.io/cleaning-roster",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
