--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "date-fns": "^4.1.0",
     "firebase": "^12.4.0",
     "gsap": "^3.13.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
